--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,6 @@
 
 body {
   background-color: #292d3e;
-  overflow-x: hidden;
 }
 
 .app-container {
@@ -29,6 +28,10 @@ body {
   margin-bottom: 15px;
   padding: 35px;
   color: #a8b2d1;
+  -webkit-animation: container-fade 1s;
+  -moz-animation: container-fade 1s; 
+  -ms-animation: container-fade 1s; 
+  animation: container-fade 1s;
 }
 
 .app-footer {
@@ -40,7 +43,10 @@ body {
   font-size: 12px;
   letter-spacing: 2px;
   color: #8892b0;
-  /* remove for different footer */
+  -webkit-animation: container-fade 1s;
+  -moz-animation: container-fade 1s; 
+  -ms-animation: container-fade 1s; 
+  animation: container-fade 1s;
 
 }
 
@@ -51,6 +57,10 @@ body {
   box-shadow: 0px 0px 25px 0px #081325;
   border-radius: 3px;
   margin: 25px 0px;
+  -webkit-animation: container-fade 1s;
+  -moz-animation: container-fade 1s; 
+  -ms-animation: container-fade 1s; 
+  animation: container-fade 1s;
 }
 
 .form-container {
@@ -117,12 +127,12 @@ button:hover {
 
 .weather-container {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
   background-color: #292d3e;
   width: 100%;
   height: 100%;
-  padding: 50px 50px;
+  padding: 40px 40px;
   border-bottom-right-radius: 3px;
   border-top-right-radius: 3px;
   border-left: solid 1px #a8b2d1;
@@ -134,12 +144,34 @@ button:hover {
   animation: container-fade 1s;
 }
 
-.weather-container p {
+.weather-container {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   font-size: 16px;
   font-family: montserrat;
   color: #a8b2d1;
+}
+
+.weather-description {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.weather-wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.weather-titles {
+  text-align: left;
+  text-transform: capitalize;
+}
+
+.weather-data {
+  text-align: right;
+  padding-left: 20px;
 }
 
 .error {
