--- a/src/App.css
+++ b/src/App.css
@@ -161,7 +161,8 @@ button:hover {
 .weather-wrapper {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-between;
+  padding: 0px 10px;
 }
 
 .weather-titles {
